--- a/Gra/Gra.csproj
+++ b/Gra/Gra.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\NyanCatMusic.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\NyanCatMusic.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
 
     <PackageReference Include="CsvHelper" Version="32.0.3" />
   </ItemGroup>
